<resources>
    <string name="app_name">CocheraApp</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="clave">Clave</string>
    <string name="repitaclave">Repita Clave</string>
    <string name="guardar">GUARDAR</string>
    <string name="login">LOGIN</string>
    <string name="lbl_forgot_password">¿Se te olvidó tu contraseña?</string>
    <string name="hint_email">Ingrese Correo</string>
    <string name="btn_reset_password">RESTABLECER LA CONTRASEÑA</string>
    <string name="forgot_password_msg">Ingrese su Correo Electronico </string>
    <string name="btn_back"><![CDATA[<< REGRESAR]]></string>
    <string name="reset">¿Olvidó su contraseña?</string>
    <string name="busqueda">Iniciar Busqueda Cochera</string>
    <string name="RMI">REGISTRO / MODIFICACIÓN e INFORMACIÓN</string>
    <string name="AL">ASIGNACIÓN / LIBERACIÓN</string>
    <string name="local">Nombre del Local</string>
    <string name="repre">Nombre del Representante</string>
    <string name="cedu">Cédula del Representante</string>
    <string name="ruc">RUC.</string>
    <string name="patente">Número de Patente</string>
    <string name="cod">Código Municipal</string>
    <string name="direcc">Dirección</string>
    <string name="sitios">Número de Sitios Disponibles</string>
    <string name="hora">Tarifa por Hora.</string>
    <string name="geo">Georreferenciación ubicación basada en latitud y longitud</string>
    <string name="RC">Registro de Cochera</string>
    <string name="title_activity_busqueda">Map</string>
    <string name="latitud">Latitud:</string>
    <string name="longitud">Longitud:</string>
    <string name="parar_actualizaciones">Parar Actualizaciones</string>
    <string name="iniciar_actualizaciones">Iniciar</string>
</resources>
