<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OperAdmActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="top"
                android:background="@color/colorCyanBlue"
                android:orientation="horizontal">
            <Button
                android:id="@+id/btnatras"
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_gravity="fill"
                android:layout_marginLeft="10sp"
                android:background="@drawable/atras"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="top"
                    android:layout_marginLeft="10sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorStandardBlack"
                    android:textSize="28dp"
                    android:text="@string/RC"/>
            </LinearLayout>
            <EditText
                android:id="@+id/txtloca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorDarkBlue"
                android:hint="@string/local" />

            <EditText
                android:id="@+id/txtrepre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorDarkBlue"
                android:hint="@string/repre" />

            <EditText
                android:id="@+id/txtcedu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorDarkBlue"
                android:hint="@string/cedu"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtruc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorDarkBlue"
                android:hint="@string/ruc"
                android:inputType="number"/>

            <EditText
                android:id="@+id/txtpate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorDarkBlue"
                android:hint="@string/patente"
                android:inputType="number"/>

            <EditText
                android:id="@+id/txtcod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorDarkBlue"
                android:hint="@string/cod" />

            <EditText
                android:id="@+id/txtdire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorDarkBlue"
                android:hint="@string/direcc" />

            <EditText
                android:id="@+id/txtsit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorDarkBlue"
                android:hint="@string/sitios"
                android:inputType="number"/>

            <EditText
                android:id="@+id/txthora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorDarkBlue"
                android:hint="@string/hora"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/txtgeo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorDarkBlue"
                android:hint="@string/geo" />

            <Button
                android:id="@+id/btnguar"
                android:layout_width="match_parent"
                android:textColor="@color/colorA"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:background="@drawable/buttonusu"
                android:text="@string/guardar" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>