<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context=".RegistroActivity">
    <EditText
        android:id="@+id/txtnom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:textColor="@color/colorA"
        android:textColorHint="@color/colorA"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/txtape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido"
        android:padding="10dp"
        android:textColor="@color/colorA"
        android:textColorHint="@color/colorA"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/txtcorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:textColor="@color/colorA"
        android:textColorHint="@color/colorA"
        android:padding="10dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/txtclave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/clave"
        android:inputType="textPassword"
        android:textColor="@color/colorA"
        android:textColorHint="@color/colorA"
        android:padding="10dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/txtrepita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repitaclave"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/colorA"
        android:textColor="@color/colorA"
        android:layout_marginTop="20dp"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="116dp"
        android:layout_marginLeft="11dp"
        android:visibility="invisible"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        <Button
            android:id="@+id/btnguardar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:text="@string/guardar"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@drawable/button"
            />

        <Button
            android:id="@+id/btnlg"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>