<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/abc"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/inicio" />
    </LinearLayout>

    <EditText
        android:id="@+id/usuario"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="55dp"
        android:drawableStart="@drawable/usu"
        android:drawableLeft="@drawable/usu"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"
        android:lineSpacingExtra="12sp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAllCaps="true"
        android:textColor="@color/colorA"
        android:textColorHint="@color/colorA"
        android:textStyle="bold"
        android:typeface="sans" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/pass"
        android:drawableLeft="@drawable/pass"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:lineSpacingExtra="12sp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAllCaps="true"
        android:textColor="@color/colorA"
        android:textColorHint="@color/colorA"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/txtolvi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="23dp"
        android:layout_gravity="center"
        android:textColor="@color/colorA"
        android:text="@string/reset" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="80dp"
            android:text="@string/iniciar"
            android:background="@drawable/buttonlo"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:text="@string/registrarse"
            android:background="@drawable/buttonlo"
            android:textColor="@android:color/white" />



    </LinearLayout>


</LinearLayout>